--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div class="nameDiv">
             <h1 class="name">Asaad Hussain</h1>
             <div class="imgDiv">
-                <img src="../public/Closeup.jpg" alt="image" class="image1">
+                <img src="./Closeup.jpg" alt="image" class="image1">
             </div>
         </div>
         <div class="innerDiv">
