--- a/src/index.html
+++ b/src/index.html
@@ -38,19 +38,19 @@
                     <ul class="subList">
                         <li> From Sir Syed University 2023</li>
                     </ul>
-                    <li class="list">Bachelors of Science in Computer Science</li>
+                    <li class="list">Intermediate in General Science</li>
                     <ul class="subList">
-                        <li> From Sir Syed University 2023</li>
+                        <li> From Govt. National College 2018</li>
                     </ul>
-                    <li class="list">Bachelors of Science in Computer Science</li>
+                    <li class="list">O Levels in Science</li>
                     <ul class="subList">
-                        <li> From Sir Syed University 2023</li>
+                        <li> From Arab Unity School 2015</li>
                     </ul>
                 </ul>
             </div>
 
             <div class="buttonDiv">
-                <button class="button1">PRESS</button>
+                <button class="button1">Skills</button>
             </div>
             <div class="Skills personalInfo" id="skillsSection">
                 <div class="title">
@@ -69,10 +69,14 @@
                     Work Experience
                 </div>
                 <ul class="workExpList content">
-                    <li class="list">Next JS</li>
-                    <li class="list">HTML CSS</li>
-                    <li class="list">MS Office</li>
-                    <li class="list">MERN stack</li>
+                    <li class="list">Frontend Intern</li>
+                    <ul class="subList">
+                        <li>Mean3 - 3 months</li>
+                    </ul>
+                    <li class="list">Facebook Sales</li>
+                    <ul class="subList">
+                        <li> Orbitek Tech - 1 months</li>
+                    </ul>
                 </ul>
             </div>
         </div>
