--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
 
 <body>
     <div class="mainDiv">
-        <div class="nameDiv">
-            <h1 class="name">Asaad Hussain</h1>
+        <div class="topDiv">
+            <div class="nameD">
+                <h1 class="name">Asaad Hussain</h1>
+            </div>
             <div class="imgDiv">
                 <img src="./Closeup.jpg" alt="image" class="image1">
             </div>
